# AIT

./: .gitignore  COMPLETE.md  PROJECT_STATUS.md  TEST_RESULTS.md  USAGE.md  ZED_EXTENSION.md  package-lock.json  package.json  readme.md  test.sh
cli/: package.json
cli/src/: index.ts
extension/: package.json
extension/src/: extension.ts
extension/src/client/: daemon-client.ts
extension/src/commands/: debug-test.ts  explain-file.ts  refactor-function.ts  summarize-standards.ts
shared/: package.json
shared/src/: protocol.ts  types.ts
zed-extension/: .gitignore  API_FIXES.md  API_UPDATE_SUMMARY.md  BUILD_FIXES.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_NOTES.md  INSTALL.md  LICENSE  Makefile  NOTES.md  README.md  SUMMARY.md  TODO.md  build.sh  extension.toml
zed-extension/src/: lib.rs
