[package]
name = "ait-zed-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use the latest version of the API available in 2026
zed_extension_api = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: Avoid reqwest/tokio unless using a WASI-compatible polyfill
